tests/fixtures/invalid/string-no-quotes-constant-like.stderr
TOML parse error at line 1, column 8
  |
1 | value=trust
  |        ^
Unexpected `r`
Expected `rue`
